TestSuite/errors/err0525_res2.pas
uses err0524_res_unit;
begin
  
end.